# HWSTAT2324

./: README.md
blog/: README.md  _config.yml
blog/_includes/: head.html
blog/_pages/: course_material.md
blog/_posts/: 2023-10-10-HW1.md
docs/: Gemfile  README.md  _config.yml
docs/_includes/: head.html  toc-date.html
docs/_pages/: extras.md  glivenko-cantelli.md
docs/_posts/: 2023-10-10-HW1.md  2023-10-17-HW2.md  2023-10-18-HW3.md  2023-10-31-HW4.md  2023-11-02-HW5.md  2023-11-05-algorithms_for_random_variates_generation.md  2023-11-14-HW6.md  2023-11-15-Wiener-Process-and-Geometric-Brownian-Motion  2023-11-15-Wiener-Process-and-Geometric-Brownian-Motion.md  2023-11-15-central_limit_theorem.md  2023-11-16-Givenko-Cantelli.md  2023-11-20-HW7.md  2023-11-30-Gaussian-distribution.md  2023-11-30-Statistical-distribution.md  2023-12-02-Ito-calculus.md  2023-12-02-Poisson-process.md  2023-12-03-Functional-CLT.md  2023-12-03-Stochastic-processes.md  2023-12-04-Law-large-numbers.md  2023-12-04-Law-largel-numbers.md  2023-12-04-Online-Algorithm-for-data-streams.md
docs/assets/extras/: index.html
docs/assets/gitbook/: custom-local.css  custom.css
source/: README.md
source/C#/: HW2324.sln
source/C#/HW1/: App.xaml  HW1.csproj  MainPage.xaml
source/CSharp/: HW2324.sln
source/CSharp/HW1/: App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  HW1.csproj  MainPage.xaml.cs  MauiProgram.cs
source/JavaScript/: HW1.html
source/Python/: gameoflife.py  hw1.py  thesis3.py  thesis4.py
source/Python/thesis/: pyproject.toml  thesis10.py
theory/: hw1.md
(+53 files in other folders)
