[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Owanesh <24321561+Owanesh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
